--- a/res/layout/list_post_details.xml
+++ b/res/layout/list_post_details.xml
@@ -24,7 +24,8 @@
         <RelativeLayout
             android:id="@+id/list_post_details_linear_head"
             android:layout_width="70dp"
-            android:layout_height="70dp" >
+            android:layout_height="70dp"
+            android:layout_marginTop="-5dp" >
 
             <ImageView
                 android:id="@+id/list_post_details_image_head"
@@ -47,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/list_post_details_linear_head"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="5dp"
             android:layout_toEndOf="@id/list_post_details_linear_head"
             android:layout_toRightOf="@id/list_post_details_linear_head"
             android:text="@string/meng_mei"
