--- a/res/layout/fragment_text.xml
+++ b/res/layout/fragment_text.xml
@@ -15,28 +15,66 @@
 
     <LinearLayout
         android:id="@+id/fragment_text_post_share"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/fragment_main_selection_bar"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-12dp"
+        android:background="@drawable/lol_background_icon"
+        android:baselineAligned="false"
         android:orientation="horizontal"
         android:visibility="gone" >
 
-        <ImageView
-            android:id="@+id/fragment_text_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@drawable/ic_launcher"
-            android:src="@drawable/ic_launcher" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/fragment_text_share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:contentDescription="@drawable/ic_launcher"
-            android:src="@drawable/ic_launcher" />
+            <ImageView
+                android:id="@+id/fragment_text_post"
+                android:layout_width="66.6dp"
+                android:layout_height="66.6dp"
+                android:background="@drawable/shape_selection_bar_round_yellow_information"
+                android:contentDescription="@drawable/ic_launcher"
+                android:padding="20dp"
+                android:src="@drawable/yue_message_icon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:text="发帖"
+                android:textColor="#666666"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/fragment_text_share"
+                android:layout_width="66.6dp"
+                android:layout_height="66.6dp"
+                android:background="@drawable/shape_selection_bar_round_red"
+                android:contentDescription="@drawable/heart_icon"
+                android:padding="20dp"
+                android:src="@drawable/heart_icon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:text="分享"
+                android:textColor="#666666"
+                android:textSize="15sp" />
+        </LinearLayout>
     </LinearLayout>
 
     <include
