--- a/res/layout/title_navigation_bar.xml
+++ b/res/layout/title_navigation_bar.xml
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:padding="5dp"
         android:paddingBottom="@dimen/activity_navigation_bar_paddingtop"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -72,6 +73,23 @@
         android:paddingRight="@dimen/activity_navigation_bar_paddingtop"
         android:paddingTop="2dp"
         android:textSize="13sp"
+        android:visibility="gone" />
+
+    <ImageView
+         android:id="@+id/title_navigation_image_right_title"
+        android:layout_width="38.6dp"
+        android:layout_height="38.6dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:contentDescription="@drawable/transparent_search"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/activity_navigation_bar_paddingtop"
+        android:paddingRight="@dimen/activity_navigation_bar_paddingtop"
+        android:paddingTop="10dp"
+        android:src="@drawable/transparent_search"
         android:visibility="gone" />
 
     <View
