--- a/res/layout/activity_yuye_lu_homepage.xml
+++ b/res/layout/activity_yuye_lu_homepage.xml
@@ -33,17 +33,26 @@
             android:background="@color/write"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginStart="20dp"
-                android:contentDescription="@drawable/yo_hey_head_portrait"
-                android:src="@drawable/yo_hey_head_portrait" />
-
+			<RelativeLayout 
+			    android:layout_width="69dp"
+			    android:layout_height="69dp"
+			    android:layout_marginEnd="10dp"
+               	android:layout_marginLeft="20dp"
+              	android:layout_marginRight="10dp"
+                android:layout_marginStart="20dp" >
+           	    <ImageView
+              		android:id="@+id/homepage_head_image"
+              		android:layout_width="50dp"
+              		android:layout_height="50dp" 	
+                    android:layout_centerInParent="true"
+               	    android:contentDescription="@drawable/yo_hey_head_portrait"
+                	android:src="@drawable/yo_hey_head_portrait" />
+           	    <View
+                	android:id="@+id/list_main_image_head_tu_view"
+                	android:layout_width="fill_parent"
+                	android:layout_height="fill_parent"
+               		android:background="@drawable/click_the_list_to_change_the_background_shape" />
+			</RelativeLayout>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -51,6 +60,7 @@
                 android:orientation="vertical" >
 
                 <TextView
+                    android:id="@+id/homepage_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="SKT-1 Caker"
@@ -71,6 +81,7 @@
                         android:textSize="12sp" />
 
                     <TextView
+                        android:id="@+id/homepage_area" 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
