--- a/res/layout/list_locate_view.xml
+++ b/res/layout/list_locate_view.xml
@@ -14,8 +14,9 @@
             android:id="@+id/locate_text_name"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:gravity="center_vertical"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:textColor="#666666"
             android:textSize="15sp" />
 
