--- a/res/drawable/my_head_selector.xml
+++ b/res/drawable/my_head_selector.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item   android:state_focused="false" android:state_pressed="true">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+        <item   android:state_focused="false" android:state_pressed="true">
         <shape android:shape="oval">
-            <stroke   android:width="11dp" android:color="@color/main_gray" />
+            <stroke   android:width="11dp" android:color="#343434" />
             <solid android:color="@null"/>
         </shape>
     </item>
     <item   android:state_focused="false" android:state_pressed="false">
         <shape android:shape="oval">
-            <stroke   android:width="11dp" android:color="@color/white" />
+            <stroke   android:width="11dp" android:color="#343434" />
               <solid android:color="@null"/>
         </shape>
     </item>
- 
+
 </selector>
