--- a/res/layout/activity_yuye_lu_homepage.xml
+++ b/res/layout/activity_yuye_lu_homepage.xml
@@ -46,7 +46,7 @@
               		android:layout_height="50dp" 	
                     android:layout_centerInParent="true"
                	    android:contentDescription="@drawable/yo_hey_head_portrait"
-                	android:src="@drawable/yo_hey_head_portrait" />
+                	android:background="#f2f4f5" />
            	    <View
                 	android:id="@+id/list_main_image_head_tu_view"
                 	android:layout_width="fill_parent"
