--- a/res/layout/list_head_personal_post.xml
+++ b/res/layout/list_head_personal_post.xml
@@ -30,7 +30,7 @@
                 android:layout_height="48dp"
                 android:layout_centerInParent="true"
                 android:contentDescription="@drawable/ic_launcher"
-                android:src="@drawable/tui_jian_kai_hei_1" />
+                android:background="#f2f4f5" />
 
             <View
                 android:layout_width="fill_parent"
@@ -172,17 +172,6 @@
         	android:text="1"
         	android:textColor="@color/main_text"
             android:textSize="12sp"/>
-
-   <!--      <TextView
-            android:id="@+id/personal_post_text_zhan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:text="1"
-            android:textColor="@color/main_text"
-            android:textSize="12sp" /> -->
     </LinearLayout>
 
 </LinearLayout>
