--- a/res/layout/friend_material_main.xml
+++ b/res/layout/friend_material_main.xml
@@ -4,211 +4,231 @@
     android:layout_height="match_parent"
     android:background="#f2f4f5"
     android:orientation="vertical" >
+
     <!-- 好友的资料界面 -->
-    <RelativeLayout 
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView 
+        android:layout_height="wrap_content" >
+
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/yo_hey_material_background"
-            android:contentDescription="@drawable/yo_hey_material_background"/>
+            android:contentDescription="@drawable/yo_hey_material_background"
+            android:src="@drawable/yo_hey_material_background" />
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp">
-            <ImageView 
+            android:layout_height="50dp" >
+
+            <TextView
                 android:id="@+id/friend_message_frame_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="11dp"
-                android:layout_marginStart="11dp"
-                android:src="@drawable/yo_hey_back_image"
-                android:contentDescription="@drawable/yo_hey_back_image"/>
-            <TextView 
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_toRightOf="@+id/friend_message_frame_back"
-               android:layout_toEndOf="@+id/friend_message_frame_back"
-               android:layout_marginLeft="7dp"
-               android:layout_marginStart="7dp"
-               android:layout_centerVertical="true"
-               android:text="返回"
-               android:textSize="15sp"
-               android:textColor="#ffffff"/>
+                android:drawableLeft="@drawable/yo_hey_back_image"
+                android:drawableStart="@drawable/yo_hey_back_image"
+                android:padding="8dp"
+                android:text="返回"
+                android:textColor="#ffffff"
+                android:textSize="15sp" />
         </RelativeLayout>
-        <ImageView 
+
+        <ImageView
             android:id="@+id/friend_message_head_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="60dp"
-            android:src="@drawable/yo_hey_head_portrait"
-            android:contentDescription="@drawable/yo_hey_head_portrait"/>
-        <TextView 
+            android:contentDescription="@drawable/yo_hey_head_portrait"
+            android:src="@drawable/yo_hey_head_portrait" />
+
+        <TextView
             android:id="@+id/friend_message_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="145dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="145dp"
             android:text="赵日天"
             android:textColor="#e9f83c"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
     </RelativeLayout>
-    <View 
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="13dp"/>
-    <LinearLayout 
+        android:layout_height="13dp" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
-        android:orientation="vertical">
-        <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:orientation="horizontal">
-        <TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp"
+                android:gravity="center_vertical"
+                android:text="个性签名"
+                android:textColor="#333333"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/friend_material_signature"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="34dp"
+                android:layout_marginStart="34dp"
+                android:gravity="center_vertical"
+                android:text="超神到超鬼的挫败感"
+                android:textColor="#888888"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             android:layout_marginLeft="18dp"
             android:layout_marginStart="18dp"
-            android:gravity="center_vertical"
-            android:text="个性签名"
-            android:textColor="#333333"
-            android:textSize="14sp"/>
-        <TextView 
-            android:id="@+id/friend_material_signature"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp"
-            android:gravity="center_vertical"
-            android:text="超神到超鬼的挫败感"
-            android:textColor="#888888"
-            android:textSize="12sp"/>
-    </LinearLayout>
-    <View 
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:background="#f2f4f5"/>
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:orientation="horizontal">
-        <TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:background="#f2f4f5" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp"
+                android:gravity="center_vertical"
+                android:text="出生日期"
+                android:textColor="#333333"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/friend_material_date_of_birth"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="34dp"
+                android:layout_marginStart="34dp"
+                android:gravity="center_vertical"
+                android:text="2001-11-11"
+                android:textColor="#888888"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             android:layout_marginLeft="18dp"
             android:layout_marginStart="18dp"
-            android:gravity="center_vertical"
-            android:text="出生日期"
-            android:textColor="#333333"
-            android:textSize="14sp"/>
-        <TextView 
-            android:id="@+id/friend_material_date_of_birth"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp"
-            android:gravity="center_vertical"
-            android:text="2001-11-11"
-            android:textColor="#888888"
-            android:textSize="12sp"/>
-    </LinearLayout>
-    <View 
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:background="#f2f4f5"/>
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:orientation="horizontal">
-        <TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:background="#f2f4f5" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp"
+                android:gravity="center_vertical"
+                android:text="兴趣爱好"
+                android:textColor="#333333"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/friend_material_love"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="34dp"
+                android:layout_marginStart="34dp"
+                android:gravity="center_vertical"
+                android:text="玩游戏、打篮球、睡觉"
+                android:textColor="#888888"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             android:layout_marginLeft="18dp"
             android:layout_marginStart="18dp"
-            android:gravity="center_vertical"
-            android:text="兴趣爱好"
-            android:textColor="#333333"
-            android:textSize="14sp"/>
-        <TextView 
-            android:id="@+id/friend_material_love"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp"
-            android:gravity="center_vertical"
-            android:text="玩游戏、打篮球、睡觉"
-            android:textColor="#888888"
-            android:textSize="12sp"/>
-    </LinearLayout>
-    <View 
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:background="#f2f4f5"/>
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:orientation="horizontal">
-        <TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:background="#f2f4f5" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp"
+                android:gravity="center_vertical"
+                android:text="擅长位置"
+                android:textColor="#333333"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/friend_material_good"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="34dp"
+                android:layout_marginStart="34dp"
+                android:gravity="center_vertical"
+                android:text="ADC、中单"
+                android:textColor="#888888"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             android:layout_marginLeft="18dp"
             android:layout_marginStart="18dp"
-            android:gravity="center_vertical"
-            android:text="擅长位置"
-            android:textColor="#333333"
-            android:textSize="14sp"/>
-        <TextView 
-            android:id="@+id/friend_material_good"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp"
-            android:gravity="center_vertical"
-            android:text="ADC、中单"
-            android:textColor="#888888"
-            android:textSize="12sp"/>
+            android:background="#f2f4f5" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp"
+                android:gravity="center_vertical"
+                android:text="标签"
+                android:textColor="#333333"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/friend_material_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="64dp"
+                android:layout_marginStart="64dp"
+                android:gravity="center_vertical"
+                android:text="游戏大腿、土豪、技术宅、文艺青年、00后"
+                android:textColor="#888888"
+                android:textSize="12sp" />
+        </LinearLayout>
     </LinearLayout>
-    <View 
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:background="#f2f4f5"/>
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:orientation="horizontal">
-        <TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp"
-            android:gravity="center_vertical"
-            android:text="标签"
-            android:textColor="#333333"
-            android:textSize="14sp"/>
-        <TextView 
-            android:id="@+id/friend_material_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="64dp"
-            android:layout_marginStart="64dp"
-            android:gravity="center_vertical"
-            android:text="游戏大腿、土豪、技术宅、文艺青年、00后"
-            android:textColor="#888888"
-            android:textSize="12sp"/>
-    </LinearLayout>
-    </LinearLayout> 
-    <TextView 
+
+    <TextView
         android:id="@+id/friend_material_send_message"
         android:layout_width="match_parent"
         android:layout_height="37dp"
@@ -219,8 +239,9 @@
         android:gravity="center"
         android:text="发消息"
         android:textColor="#ffffff"
-        android:textSize="15sp"/>
-    <TextView 
+        android:textSize="15sp" />
+
+    <TextView
         android:id="@+id/friend_material_send_voice"
         android:layout_width="match_parent"
         android:layout_height="37dp"
@@ -231,5 +252,6 @@
         android:gravity="center"
         android:text="发语音"
         android:textColor="#ffffff"
-        android:textSize="15sp"/>
+        android:textSize="15sp" />
+
 </LinearLayout>
