--- a/res/layout/friend_message_frame_main.xml
+++ b/res/layout/friend_message_frame_main.xml
@@ -11,24 +11,19 @@
         android:layout_height="50dp"
         android:background="#000000" >
 
-        <ImageView
+        <TextView
             android:id="@+id/friend_message_frame_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:contentDescription="@drawable/ic_launcher"
-            android:src="@drawable/yo_hey_back_image" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="3dp"
-            android:layout_marginStart="3dp"
             android:layout_toEndOf="@+id/friend_message_frame_back"
             android:layout_toRightOf="@+id/friend_message_frame_back"
+            android:drawableLeft="@drawable/yo_hey_back_image"
+            android:gravity="center_vertical"
+            android:paddingBottom="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="8dp"
             android:text="消息"
             android:textColor="#ffffff"
             android:textSize="15sp" />
@@ -48,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
+            android:padding="8dp"
             android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
@@ -81,6 +77,7 @@
             android:src="@drawable/yo_hey_iconfont_huatong" />
 
         <EditText
+            android:id="@+id/msg_edit"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
@@ -99,6 +96,7 @@
             android:src="@drawable/yo_hey_smiling_face" />
 
         <TextView
+            android:id="@+id/msg_send"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
