--- a/res/layout/list_head_personal_post.xml
+++ b/res/layout/list_head_personal_post.xml
@@ -11,6 +11,7 @@
         android:layout_height="10dp" />
 
     <RelativeLayout
+        android:id="@+id/personal_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/write"
@@ -73,10 +74,10 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="13dp"
-            android:layout_marginRight="13dp"
             android:contentDescription="@drawable/tian_jia_an_niu"
+            android:padding="13dp"
             android:src="@drawable/tian_jia_an_niu" />
+
     </RelativeLayout>
 
     <View
