--- a/res/layout/activity_yue_lu_personal_information.xml
+++ b/res/layout/activity_yue_lu_personal_information.xml
@@ -30,38 +30,27 @@
                 android:textColor="@color/main_title_text"
                 android:textSize="16sp" />
 
-            <RelativeLayout
+           <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
                 <!-- 头像 -->
-                <RelativeLayout 
-                    android:id="@+id/personal_user_image_relative"
-                    android:layout_width="69dp"
-                    android:layout_height="69dp"
+                <com.yuanchuang.yohey.MyImageView
+                    android:id="@+id/personal_user_image_portrait"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp">
-                	<ImageView
-                    	android:id="@+id/personal_user_image_portrait"
-                    	android:layout_width="50dp"
-                    	android:layout_height="50dp"
-                    	android:layout_centerInParent="true"
-                    	android:background="@color/light_gray"
-                    	android:contentDescription="@drawable/ic_launcher" />
-                	<View
-                		android:id="@+id/list_main_image_head_tu_view"
-                		android:layout_width="fill_parent"
-                		android:layout_height="fill_parent"
-               			android:background="@drawable/click_the_list_to_change_the_background_shape" />
-				</RelativeLayout>
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/yp_hey_background_image" />
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp"
-                    android:layout_toEndOf="@id/personal_user_image_relative"
-                    android:layout_toRightOf="@id/personal_user_image_relative"
+                    android:layout_toEndOf="@+id/personal_user_image_portrait"
+                    android:layout_toRightOf="@+id/personal_user_image_portrait"
                     android:gravity="center_vertical"
                     android:orientation="vertical" >
 
