--- a/res/layout/child.xml
+++ b/res/layout/child.xml
@@ -5,14 +5,13 @@
     android:layout_marginTop="10dp"
     android:orientation="horizontal" >
 
-    <ImageView
+    <com.yuanchuang.yohey.MyImageView
         android:id="@+id/tv_childHeadImage"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="21dp"
         android:layout_marginStart="21dp"
-        android:src="@drawable/yo_hey_head_portrait"
-        android:contentDescription="@drawable/yo_hey_head_portrait"/>
+        android:src="@drawable/yp_hey_background_image"/>
 
     <LinearLayout
         android:layout_width="match_parent"
