--- a/res/layout/list_main_post.xml
+++ b/res/layout/list_main_post.xml
@@ -17,19 +17,12 @@
             android:layout_width="62dp"
             android:layout_height="62dp" >
 
-            <ImageView
+            <com.yuanchuang.yohey.MyImageView
                 android:id="@+id/list_main_image_head_tu"
                 android:layout_width="43dp"
                 android:layout_height="43dp"
                 android:layout_centerInParent="true"
-                android:contentDescription="@drawable/meng_mei_head"
-                android:background="#f2f4f5" />
-
-            <View
-                android:id="@+id/list_main_image_head_tu_view"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@drawable/click_the_list_to_change_the_background_shape" />
+                android:src="@drawable/yp_hey_background_image" />
 
             <ImageView
                 android:id="@+id/list_main_image_popular"
