--- a/res/layout/list_post_details.xml
+++ b/res/layout/list_post_details.xml
@@ -21,25 +21,14 @@
 
         <!-- 评论人头像 -->
 
-        <RelativeLayout
-            android:id="@+id/list_post_details_linear_head"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="-5dp" >
-
-            <ImageView
-                android:id="@+id/list_post_details_image_head"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_centerInParent="true"
-                android:contentDescription="@drawable/zhu_ge_wo_ai_ni_tu"
-                android:background="#f2f4f5" />
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@drawable/shape_main_head_white" />
-        </RelativeLayout>
+        <com.yuanchuang.yohey.MyImageView
+            android:id="@+id/list_post_details_image_head"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/yp_hey_background_image" />
 
         <!-- 评论人昵称 -->
 
@@ -47,10 +36,10 @@
             android:id="@+id/list_post_details_text_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/list_post_details_linear_head"
+            android:layout_alignTop="@+id/list_post_details_image_head"
             android:layout_marginTop="5dp"
-            android:layout_toEndOf="@id/list_post_details_linear_head"
-            android:layout_toRightOf="@id/list_post_details_linear_head"
+            android:layout_toEndOf="@+id/list_post_details_image_head"
+            android:layout_toRightOf="@+id/list_post_details_image_head"
             android:text="@string/meng_mei"
             android:textColor="@color/main_title_text"
             android:textSize="13sp" />
@@ -63,8 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/list_post_details_text_name"
             android:layout_marginTop="6dp"
-            android:layout_toEndOf="@id/list_post_details_linear_head"
-            android:layout_toRightOf="@id/list_post_details_linear_head"
+            android:layout_toEndOf="@+id/list_post_details_image_head"
+            android:layout_toRightOf="@+id/list_post_details_image_head"
             android:text="@string/list_time"
             android:textColor="@color/main_text"
             android:textSize="10sp" />
@@ -77,8 +66,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/list_post_details_text_time"
             android:layout_marginTop="8dp"
-            android:layout_toEndOf="@id/list_post_details_linear_head"
-            android:layout_toRightOf="@id/list_post_details_linear_head"
+            android:layout_toEndOf="@+id/list_post_details_image_head"
+            android:layout_toRightOf="@+id/list_post_details_image_head"
             android:text="@string/carry_me_fly"
             android:textColor="@color/main_text"
             android:textSize="11sp" />
