--- a/res/layout/list_post_had_sent_and_add_view.xml
+++ b/res/layout/list_post_had_sent_and_add_view.xml
@@ -13,28 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
-        android:gravity="center_vertical"
         android:orientation="horizontal" >
 
-        <RelativeLayout
-            android:layout_width="74dp"
-            android:layout_height="74dp"
-            android:layout_marginTop="-5dp"
-            android:gravity="center" >
-
-            <ImageView
-                android:id="@+id/list_post_details_image_head_portrait"
-                android:layout_width="58dp"
-                android:layout_height="58dp"
-                android:layout_centerInParent="true"
-                android:contentDescription="@drawable/click_the_list_to_change_the_background_shape"
-                android:src="@drawable/log_ic" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/click_the_list_to_change_the_background_shape" />
-        </RelativeLayout>
+        <com.yuanchuang.yohey.MyImageView
+            android:id="@+id/list_post_details_image_head_portrait"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:contentDescription="@drawable/click_the_list_to_change_the_background_shape"
+            android:src="@drawable/log_ic" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -47,9 +34,9 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
                 android:gravity="center_vertical"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                android:paddingTop="3dp" >
 
                 <TextView
                     android:id="@+id/list_post_details_text_user_name"
@@ -57,7 +44,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingBottom="3dp"
-                    android:paddingTop="3dp"
                     android:text="1253"
                     android:textColor="@color/main_title_text"
                     android:textSize="13sp" />
@@ -71,7 +57,6 @@
                     android:drawableLeft="@drawable/the_number_of_posts_to_view"
                     android:drawablePadding="5dp"
                     android:drawableStart="@drawable/the_number_of_posts_to_view"
-                    android:padding="10dp"
                     android:textColor="@color/main_text"
                     android:textSize="10sp" />
 
@@ -84,7 +69,6 @@
                     android:drawableLeft="@drawable/post_message"
                     android:drawablePadding="5dp"
                     android:drawableStart="@drawable/post_message"
-                    android:padding="10dp"
                     android:textColor="@color/main_text"
                     android:textSize="10sp" />
             </LinearLayout>
@@ -93,7 +77,7 @@
                 android:id="@+id/list_post_details_text_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="3dp"
                 android:textColor="@color/main_text"
                 android:textSize="13sp" />
 
@@ -101,8 +85,8 @@
                 android:id="@+id/list_post_details_text_context"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="7dp"
                 android:textColor="@color/main_text"
                 android:textSize="13sp" />
         </LinearLayout>
