--- a/res/layout/activity_yuye_lu_homepage.xml
+++ b/res/layout/activity_yuye_lu_homepage.xml
@@ -34,7 +34,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
-            <com.yuanchuang.yohey.MyImageView
+            <com.yuanchuang.yohey.view.MyImageView
                 android:id="@+id/homepage_head_image"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
