--- a/res/layout/friend_chat_main.xml
+++ b/res/layout/friend_chat_main.xml
@@ -31,11 +31,20 @@
             android:layout_marginRight="9dp"
             android:layout_toLeftOf="@+id/my_chat_head_portrait"
             android:layout_toStartOf="@+id/my_chat_head_portrait"
-            android:text="嘿！约吗？"
             android:textColor="#42ACE2"
             android:textSize="12sp" />
 
-        <com.yuanchuang.yohey.MyImageView
+        <LinearLayout 
+            android:id="@+id/my_chat_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/my_chat_head_portrait"
+            android:layout_toStartOf="@+id/my_chat_head_portrait"
+            android:layout_marginEnd="9dp"
+            android:layout_marginRight="9dp"
+            android:orientation="vertical"
+            ></LinearLayout>
+        <com.yuanchuang.yohey.view.MyImageView
             android:id="@+id/my_chat_head_portrait"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -53,7 +62,7 @@
         android:orientation="horizontal"
         android:paddingBottom="5dp" >
 
-        <com.yuanchuang.yohey.MyImageView
+        <com.yuanchuang.yohey.view.MyImageView
             android:id="@+id/friend_chat_head_portrait"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -68,9 +77,16 @@
             android:layout_marginLeft="9dp"
             android:layout_marginStart="9dp"
             android:gravity="center"
-            android:text="今天不约了有点生气"
             android:textColor="#888888"
             android:textSize="12sp" />
+          <LinearLayout 
+            android:id="@+id/friend_chat_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="9dp"
+            android:layout_marginStart="9dp"
+            android:orientation="vertical"
+            ></LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
