--- a/res/layout/friend_material_main.xml
+++ b/res/layout/friend_material_main.xml
@@ -33,7 +33,7 @@
                 android:textColor="#ffffff"
                 android:textSize="15sp" />
         </RelativeLayout>
-        <com.yuanchuang.yohey.MyImageView
+        <com.yuanchuang.yohey.view.MyImageView
             android:id="@+id/friend_message_head_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
