--- a/res/layout/list_dynamic.xml
+++ b/res/layout/list_dynamic.xml
@@ -18,7 +18,7 @@
 
         <!-- 用户头像 -->
 
-        <com.yuanchuang.yohey.MyImageView
+        <com.yuanchuang.yohey.view.MyImageView
             android:id="@+id/list_dynamic_image_head_portrait"
             android:layout_width="40dp"
             android:layout_height="40dp"
