--- a/res/layout/list_head_thumb_up_for_details.xml
+++ b/res/layout/list_head_thumb_up_for_details.xml
@@ -15,7 +15,7 @@
 
         <!-- 头像 -->
 
-        <com.yuanchuang.yohey.MyImageView
+        <com.yuanchuang.yohey.view.MyImageView
             android:id="@+id/list_head_thumb_up_image_head"
             android:layout_width="50dp"
             android:layout_height="50dp"
