--- a/res/layout/list_post_had_sent_and_add_view.xml
+++ b/res/layout/list_post_had_sent_and_add_view.xml
@@ -15,7 +15,7 @@
         android:baselineAligned="false"
         android:orientation="horizontal" >
 
-        <com.yuanchuang.yohey.MyImageView
+        <com.yuanchuang.yohey.view.MyImageView
             android:id="@+id/list_post_details_image_head_portrait"
             android:layout_width="35dp"
             android:layout_height="35dp"
