--- a/res/layout/list_thumb_up_view.xml
+++ b/res/layout/list_thumb_up_view.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal"
     android:padding="10dp" >
 
-    <com.yuanchuang.yohey.MyImageView
+    <com.yuanchuang.yohey.view.MyImageView
         android:id="@+id/list_thumb_up_head"
         android:layout_width="40dp"
         android:layout_height="40dp"
