--- a/res/layout/lu.xml
+++ b/res/layout/lu.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:background="#343434" >
 
-            <com.yuanchuang.yohey.MyImageView
+            <com.yuanchuang.yohey.view.MyImageView
             	android:layout_width="40dp"
             	android:layout_height="40dp"
             	android:layout_marginEnd="10dp"
