--- a/res/layout/message_listview.xml
+++ b/res/layout/message_listview.xml
@@ -5,7 +5,7 @@
     android:layout_marginTop="10dp"
     android:orientation="horizontal" >
 
-    <com.yuanchuang.yohey.MyImageView
+    <com.yuanchuang.yohey.view.MyImageView
         android:id="@+id/tv_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
