--- a/res/layout/activity_yue_lu_dynamic.xml
+++ b/res/layout/activity_yue_lu_dynamic.xml
@@ -8,13 +8,13 @@
         android:id="@+id/dynamic_title"
         layout="@layout/title_navigation_bar" />
 
-    <ListView
+    <com.yuanchuang.yohey.view.MyListView
         android:id="@+id/dynamic_list_view"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/write"
         android:divider="@null" >
-    </ListView>
+    </com.yuanchuang.yohey.view.MyListView>
 
 </LinearLayout>
