--- a/res/layout/list_dynamic.xml
+++ b/res/layout/list_dynamic.xml
@@ -71,10 +71,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/list_dynamic_layout_context"
+        android:layout_marginBottom="5dp"
         android:layout_marginEnd="10dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="10dp"
-        android:layout_marginStart="15dp" >
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp" >
     </AbsoluteLayout>
 
     <RelativeLayout
@@ -157,6 +159,7 @@
     </RelativeLayout>
 
     <View
+        android:id="@+id/dynamic_gray_line"
         android:layout_width="fill_parent"
         android:layout_height="10dp"
         android:layout_below="@id/list_dynamic_relative_linear"
