个性签名修改

--- a/res/layout/activity_yue_lu_personal_information.xml
+++ b/res/layout/activity_yue_lu_personal_information.xml
@@ -30,12 +30,13 @@
                 android:textColor="@color/main_title_text"
                 android:textSize="16sp" />
 
-           <RelativeLayout
+            <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
                 <!-- 头像 -->
+
                 <com.yuanchuang.yohey.view.MyImageView
                     android:id="@+id/personal_user_image_portrait"
                     android:layout_width="50dp"
@@ -110,7 +111,6 @@
                                 android:id="@+id/personal_user_text_grade"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="LV30"
                                 android:textColor="@color/main_text"
                                 android:textSize="12sp" />
                             <!-- 段位 -->
@@ -294,21 +294,22 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginLeft="5dp"
                         android:layout_marginStart="5dp"
+                        android:layout_weight="1"
                         android:text="@string/signature"
                         android:textColor="@color/main_text"
                         android:textSize="12sp" />
-                    <TextView 
+
+                    <TextView
                         android:id="@+id/personal_signature_modification"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="3dp"
                         android:background="@drawable/rounded_gray_line_on_a_white_background"
+                        android:padding="3dp"
                         android:text="修改"
                         android:textColor="#f0ff44"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <View
@@ -319,7 +320,7 @@
 
                 <EditText
                     android:id="@+id/personal_user_text_signature"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="27dp"
                     android:layout_marginStart="27dp"
@@ -327,7 +328,7 @@
                     android:background="@null"
                     android:enabled="false"
                     android:focusable="false"
-                    android:text="问君鞥有几多愁，恰是一江春水向东流"
+                    android:hint=""
                     android:textColor="@color/main_text"
                     android:textSize="12sp" />
             </LinearLayout>
